# TMP_RK2_new

./: CMakeLists.txt  README.md  circle.cpp  composed_object.cpp  composed_object.h  graphical_object.cpp  line.cpp  main.cpp  point.cpp  primitive.cpp  triangle.cpp
.github/workflows/: cmake-single-platform.yml
tests/: test.cpp
