cmake_minimum_required(VERSION 3.4)
project(geo_make)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(VERSION_MAJOR 0)
set(VERSION_MINOR 1)
set(VERSION_PATCH 0)
set(VERSION_TWEAK 0)
set(VERSION\${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}.${VERSION_TWEAK})
set(VERSION_STRING "v${VERSION}")

option(BUILD_TESTS "Build tests" OFF)
include_directories(.)
add_library(circle STATIC circle.h circle.cpp)
add_library(composed_obj STATIC composed_object.h composed_object.cpp)
add_library(graphical_obj STATIC graphical_object.h graphical_object.cpp)
add_library(line STATIC line.h line.cpp)
add_library(point STATIC point.h point.cpp)
add_library(primitive STATIC primitive.h primitive.cpp)
add_library(triangle STATIC triangle.h triangle.cpp)
add_executable (result main.cpp)
target_link_libraries(circle composed_obj graphical_obj line point primitive triangle)
