cmake_minimum_required(VERSION 3.4)
project(geo_make)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories(.)
add_library(circle STATIC circle.h circle.cpp)
add_library(composed_obj STATIC composed_object.h composed_object.cpp)
add_library(graphical_obj STATIC graphical_object.h graphical_object.cpp)
add_library(line STATIC line.h line.cpp)
add_library(point STATIC point.h point.cpp)
add_library(primitive STATIC primitive.h primitive.cpp)
add_library(triangle STATIC triangle.h triangle.cpp)
add_executable (result main.cpp)
target_link_libraries(circle composed_obj graphical_obj line point primitive triangle)

enable_testing()
add_subdirectory(third-party/gtest)
file(GLOB tests "tests/*.cpp")
foreach(test ${tests})
     add_executable(check ${test})
     target_link_libraries(check gtest_main gmock_main circle composed_obj graphical_obj line point primitive triangle)
     add_test(NAME check COMMAND check)
endforeach(test ${tests})
